test/modules/error/nested.f90
module a
    module b
    end module
end module